[package]
name = "piet-tools"
version = "0.1.0"
authors = ["Cheuk Yin Ng <chucksys88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.3"
clap = "2.33.0"
crossterm = "0.13.3"

[dependencies.tui]
version = "0.7.0"
default-features = false
features = ["crossterm"]
